tests/baselines/reference/arrayLiteralTypeInference.errors.txt
tests/cases/compiler/arrayLiteralTypeInference.ts(13,5): error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type 'Action[]'.
  Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type 'Action'.
    Type '{ id: number; trueness: boolean; }' is not assignable to type 'Action'.
      Property 'trueness' does not exist on type 'Action'.
tests/cases/compiler/arrayLiteralTypeInference.ts(29,5): error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type '{ id: number; }[]'.
  Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type '{ id: number; }'.
    Type '{ id: number; trueness: boolean; }' is not assignable to type '{ id: number; }'.
      Property 'trueness' does not exist on type '{ id: number; }'.


==== tests/cases/compiler/arrayLiteralTypeInference.ts (2 errors) ====
    class Action {
        id: number;
    }
    
    class ActionA extends Action {
        value: string;
    }
    
    class ActionB extends Action {
        trueNess: boolean;
    }
    
    var x1: Action[] = [
        ~~
!!! error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type 'Action[]'.
!!! error TS2322:   Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type 'Action'.
!!! error TS2322:     Type '{ id: number; trueness: boolean; }' is not assignable to type 'Action'.
!!! error TS2322:       Property 'trueness' does not exist on type 'Action'.
        { id: 2, trueness: false },
        { id: 3, name: "three" }
    ]
    
    var x2: Action[] = [
        new ActionA(),
        new ActionB()
    ]
    
    var x3: Action[] = [
        new Action(),
        new ActionA(),
        new ActionB()
    ]
    
    var z1: { id: number }[] =
        ~~
!!! error TS2322: Type '({ id: number; trueness: boolean; } | { id: number; name: string; })[]' is not assignable to type '{ id: number; }[]'.
!!! error TS2322:   Type '{ id: number; trueness: boolean; } | { id: number; name: string; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:     Type '{ id: number; trueness: boolean; }' is not assignable to type '{ id: number; }'.
!!! error TS2322:       Property 'trueness' does not exist on type '{ id: number; }'.
        [
            { id: 2, trueness: false },
            { id: 3, name: "three" }
        ]
    
    var z2: { id: number }[] =
        [
            new ActionA(),
            new ActionB()
        ]
    
    var z3: { id: number }[] =
        [
            new Action(),
            new ActionA(),
            new ActionB()
        ]
    
    
    
    
    